# lgwa-skyloc

./: .gitignore  LGWA.bib  README.md  compare_mlgw_pn.py  interactive.ipynb  plot_et_lgwa_skyloc.py  plot_psds_bns.py  psds_against_bns_signal.py  pyproject.toml  results.md  wd_plots.py  white_dwarfs.py
documentation/: GWsNS.bib  index.html  index.qmd
lgwa-sky-localization/: colors.py  detectors.yaml  lgwa_skyloc.py  parameters.py  snr_plots.py
lgwa-whitepaper/: lgwa_gwtc3.py  multiband_waterfall.py  settings.py  single_detector_waterfall.py
lgwa_skyloc/: plotting.py  population_time_to_merger.py  psds_against_bns_signal.py  skyloc_against_time.py  white_dwarfs.py
old_computations/: Errors_ET_single_binary_SNR0.1.txt  Errors_LGWA_ET_single_binary_SNR0.1.txt  LGWA.bib  Signals_single_binary.txt  adding_mlgw_bns_to_gwfish.md  compare_mlgw_pn.py  interactive.ipynb  plot_et_lgwa_skyloc.py  pyproject.toml  results.md  transfer_func.py
old_computations/lgwa_skyloc/: psds_against_bns_signal.py  skyloc_against_time.py  white_dwarfs.py
poster/: betterposter.cls  poster.tex
poster/img/: make_qr.py
