[tool.poetry]
name = "lgwa-sky-localization"
version = "0.1.0"
description = "Estimates about the sky localization capabilities of the Lunar Gravitational Wave Antenna."
authors = ["jacopok <jacopok@gmail.com>"]
license = "GNU GPL3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.22.0"
matplotlib = "^3.5.2"
astropy = "^5.1"
GWFish = {git='https://github.com/janosch314/GWFish', develop=true, branch='io-refactor'}
gw_landscape = {git='https://github.com/jacopok/gw-landscape', develop=true}
# ipywidgets = "^7.7.1"
lalsuite = "^7.15"
jplephem = "^2.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
