[tool.poetry]
name = "lgwa_skyloc"
version = "0.1.0"
description = "Estimates about the sky localization capabilities of LGWA and ET, with white dwarfs as well as neutron stars."
authors = ["jacopok <jacopok@gmail.com>"]
license = "GNU GPL3"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = ">=1.22.0"
matplotlib = "^3.5.2"
astropy = "^5.1"
GWFish = {git='https://github.com/janosch314/GWFish', develop=true, branch='lgwa-sky-localization'}
# GWFish = {path='../GWFish', develop=true}
mlgw_bns = ">=0.11.0-alpha.1"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]
scalene = "^1.5.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
